# collatz-air

./: Cargo.toml  LICENSE  README.md
plonky3-collatz/: Cargo.toml
plonky3-collatz/src/: air.rs  main.rs  utils.rs
winterfell-collatz/: Cargo.toml
winterfell-collatz/src/: air.rs  main.rs  prover.rs  utils.rs
