[package]
name = "winterfell-collatz"
version = "0.1.0"
edition = "2021"

[dependencies]
winterfell = { version = "0.12", default-features = false }
blake3 = { version = "1.5", default-features = false }
tracing = { workspace = true }
tracing-forest = { workspace = true }
tracing-subscriber = { workspace = true }